--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cli-spinner": "^0.2.10",
     "commander": "^7.2.0",
     "inquirer": "^7.0.4",
-    "inquirer-autocomplete-prompt": "^1.3.0"
+    "inquirer-autocomplete-prompt": "^1.3.0",
+    "yaml-cfn": "^0.3.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
