--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^7.2.0",
     "inquirer": "^7.0.4",
     "inquirer-autocomplete-prompt": "^1.3.0",
+    "sentencer": "^0.2.1",
     "yaml-cfn": "^0.3.0"
   },
   "devDependencies": {
